# receipt-ai-expense-tracker

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_TRIGGER.md  LICENSE  PORTFOLIO_REVIEW.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_all.py  run_backend.py  run_frontend.py  start.sh  streamlit_app.py  test_ai_improvements.py  test_backend_deployment.py  test_system.py  vercel.json
.streamlit/: config.toml
api/: index.py  main.py  requirements.txt
backend/: ai_processor.py  main.py
docs/: architecture.md  extraction_methodology.md  gemini_receipt_parser.md  local_review.md  model_routing.md  portfolio_review.md  receipt_test_matrix.md  storage_architecture.md  testing.md  verification.md
fixtures/: synthetic-receipt.json
frontend/: .env.example  app.py  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: analytics.tsx  receipt-upload.tsx  settings.tsx
frontend/components/ui/: button.tsx  card.tsx  progress.tsx  tabs.tsx
scripts/: check_repo_guardrails.py  test_repo_guardrails.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: category-chart.tsx  dashboard.tsx  error-state.tsx  loading-state.tsx  monthly-spending-chart.tsx  parsed-receipt-review.tsx  receipt-detail.tsx  receipt-history.tsx  receipt-list.tsx  receipt-upload.test.tsx  receipt-upload.tsx  shop-summary.tsx
src/hooks/: use-receipts.ts
src/lib/: gemini.ts  receipt.test.ts  receipt.ts  stats.test.ts  stats.ts  supabase.ts
src/lib/ai/: cache.ts  (+5 more)
supabase/: schema.sql
(+12 files in other folders)
